Next and previous buttons now go by month/week/day depending on zoom level. A bit buggy because of month week wraps though

--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -121,6 +121,7 @@
 	border: 1px solid cornflowerblue;
 	height: 100%;
 	position: relative;
+	overflow: hidden;
 }
 
 .calendar-cell.weekend {
